clarat-org/clarat#644 - update _base and localeapp pull for new language filters

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -559,20 +559,26 @@ ar:
         amh: "لغة أمهرية - አማርኛ"
         ara: " لغة عربية - عربي"
         aze: "لغة أذرية - Azərbaycan"
+        ban: 
         bel: "لغة بيلاروسية - беларуская мова"
         ben: " لغة بنغالية - বাংলা"
         bos: "لغة بوسنوية - bosanski"
         bul: "لغة بلغارية - български"
+        cze: 
         deu: "لغة ألمانية - Deutsch"
         ell: "لغة يونانية - ελληνικά"
         eng: "لغة إنجليزية - English"
         fas: "لغة فارسية - فارسی"
+        fin: 
         fra: "لغة فرنسية - Français"
+        hbs: 
+        heb: 
         hin: "لغة هندية - हिन्दी"
         hrv: "لغة كرواتية - hrvatski"
         hun: "لغة مجرية - magyar"
         ita: "لغة إيطالية - italiano"
         kik: "زبان کیکویو - Gĩkũyũ"
+        kor: 
         kur: " لغة كردية - کوردی"
         lav: "لغة لاتفية - latviešu"
         lit: "لغة ليتوانية - lietuvių"
@@ -586,7 +592,9 @@ ar:
         rom: "لغة رومنية - Romani"
         ron: "لغة رومانية - română"
         rus: "لغة روسية - русский"
+        slo: 
         snk: "لغة سوننكية - Soninkanxaane"
+        som: 
         spa: "لغة إسبانية - español"
         sqi: "لغة ألبانية - Shqipja"
         srp: "لغة صربية - српски"
@@ -596,6 +604,7 @@ ar:
         tel: "لغة تيلوغوية - తెలుగు"
         tgk: "لغة طاجيكية - тоҷикӣ / تاجیکی"
         tha: "لغة تايلندية - ภาษาไทย"
+        tir: 
         tuk: "لغة تركمانية - Türkmençe / Tүркменче"
         tur: "لغة تركية - Türkçe"
         urd: "لغة أردوية - اردو"
