--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1070,20 +1070,26 @@ de:
         amh: Amharisch - አማርኛ
         ara: Arabisch - عربي
         aze: Aserbaidschanisch - Azərbaycan
+        ban: Balinesisch - Basa Bali
         bel: Weißrussisch - беларуская мова
         ben: Bengalisch - বাংলা
         bos: Bosnisch - bosanski
         bul: Bulgarisch - български
+        cze: Tschechisch - čeština
         deu: Deutsch
         ell: Griechisch - ελληνικά
         eng: Englisch - English
         fas: Persisch (Farsi) - فارسی
+        fin: Finnisch - suomi
         fra: Französisch - Français
+        hbs: Montenegrinisch - Crnogorski jezik / Црногорски језик
+        heb: Hebräisch - עברית
         hin: Hindi - हिन्दी
         hrv: Kroatisch - hrvatski
         hun: Ungarisch - magyar
         ita: Italienisch - italiano
         kik: Kikuyu - Gĩkũyũ
+        kor: Koreanisch - 한국말 / 조선말
         kur: Kurdisch - کوردی
         lav: Lettisch - latviešu
         lit: Litauisch - lietuvių
@@ -1097,7 +1103,9 @@ de:
         rom: Romanes - Romani
         ron: Rumänisch - română
         rus: Russisch - русский
+        slo: Slowakisch - slovenský jazyk
         snk: Soninke - Soninkanxaane
+        som: Somali - Soomaali
         spa: Spanisch - español
         sqi: Albanisch - Shqipja
         srp: Serbisch - српски
@@ -1107,6 +1115,7 @@ de:
         tel: Telugu - తెలుగు
         tgk: Tadschikisch - тоҷикӣ / تاجیکی
         tha: Thai - ภาษาไทย
+        tir: Tigrinisch - ትግርኛ
         tuk: Turkmenisch - Türkmençe / Tүркменче
         tur: Türkisch - Türkçe
         urd: Urdu - اردو
