--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -671,20 +671,26 @@ fr:
         amh: Amharique - አማርኛ
         ara: Arabe - عربي
         aze: Azéri - Azərbaycan
+        ban: 
         bel: Biélorusse - беларуская мова
         ben: Bengali - বাংলা
         bos: Bosnien - bosanski
         bul: Bulgare - български
+        cze: 
         deu: Allemand
         ell: Grec - ελληνικά
         eng: Anglais - English
         fas: Persan - فارسی
+        fin: 
         fra: Français
+        hbs: 
+        heb: 
         hin: Hindi - हिन्दी
         hrv: Croate - hrvatski
         hun: Hongrois - magyar
         ita: Italien - italiano
         kik: Kikuyu - Gĩkũyũ
+        kor: 
         kur: Kurde - کوردی
         lav: Letton - latviešu
         lit: Lituanien - lietuvių
@@ -698,7 +704,9 @@ fr:
         rom: Romani - Romani
         ron: Roumain - română
         rus: Russe - русский
+        slo: 
         snk: Soninké - Soninkanxaane
+        som: 
         spa: Espagnol - español
         sqi: Albanais - Shqipja
         srp: Serbe - српски
@@ -708,6 +716,7 @@ fr:
         tel: Télougou - తెలుగు
         tgk: Tadjik - тоҷикӣ / تاجیکی
         tha: Thaï - ภาษาไทย
+        tir: 
         tuk: Turkmène - Türkmençe / Tүркменче
         tur: Turc - Türkçe
         urd: Ourdou - اردو
