--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -696,20 +696,26 @@ ru:
         amh: "Амхарский язык - አማርኛ"
         ara: "Арабский язык - عربي"
         aze: "Азербайджанский язык - Azərbaycan"
+        ban: 
         bel: "Белорусский язык - беларуская мова"
         ben: "Бенгальский язык - বাংলা"
         bos: "Боснийский язык - bosanski"
         bul: "Болгарский язык - български"
+        cze: 
         deu: "Немецкий язык"
         ell: "Греческий язык - ελληνικά"
         eng: "Английский язык - English"
         fas: "Персидский язык - فارسی"
+        fin: 
         fra: "Французский язык - Français"
+        hbs: 
+        heb: 
         hin: "Хинди - हिन्दी"
         hrv: "Хорватский язык - hrvatski"
         hun: "Венгерский язык - magyar"
         ita: "Итальянский язык - italiano"
         kik: "Кикуйю язык - Gĩkũyũ"
+        kor: 
         kur: "Курдские языки - کوردی"
         lav: "Латышский язык - latviešu"
         lit: "Литовский язык - lietuvių"
@@ -723,7 +729,9 @@ ru:
         rom: "Цыганский язык - Romani"
         ron: "Румынский язык - română"
         rus: "Русский язык - русский"
+        slo: 
         snk: "Сонинке язык - Soninkanxaane"
+        som: 
         spa: "Испанский язык - español"
         sqi: "Албанский язык - Shqipja"
         srp: "Сербский язык - српски"
@@ -733,6 +741,7 @@ ru:
         tel: "Телугу - తెలుగు"
         tgk: "Таджикский язык - тоҷикӣ / تاجیکی"
         tha: "Тайский язык - ภาษาไทย"
+        tir: 
         tuk: "Туркменский язык - Türkmençe / Tүркменче"
         tur: "Турецкий язык - Türkçe"
         urd: "Урду - اردو"
