update _base and localeapp pull for ru and tr translations

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -34,7 +34,7 @@ ar:
             </p>
           link_1:
             name: "فيلم"
-            target: 
+            target: _blank
             url: http://blog.clarat.org/العثور على مساعدة بسهولة-مشروعنا-كلارات-في-فيلم قصير/
             var: "رابط _ل_الأسرة_فيلم"
           question: "ما هي كلارات؟"
@@ -43,7 +43,7 @@ ar:
           link_1:
             name: "مؤسسة بتكيزير المستقبل"
             target: blank_
-            url: 
+            url: http://www.benckiser-stiftung.org
             var: link_to_bsz
           question: "من يمول كلارات؟"
         question_11:
@@ -77,10 +77,10 @@ ar:
         question_3:
           answer: "أدخل المشكلة الخاصة بك أو المكان الذي تريد أن تبحث عن مساعدة فيه. فستجد عروض الدعم المناسبة التي بالقرب منك. أو ستجد مساعدة عن طريق التليفون أوفي  الإنترنت. %{ref_to_how_to_find_right_help} وهنا نوضح نحن لك بالضبط، كيف تجد ما تبحث عنه. فعندما تقوم بالنقر على أحد العروض فإننا نقول لك ما يجب عليك أن تفعل بعد ذلك. على سبيل المثال إذا كان عليك الإتصال أو الذهاب إلى مكان ما."
           link_1:
-            class: 
+            class: FAQ_anchor_link
             name: "هنا"
             url: 
-            var: 
+            var: ref_to_how_to_find_right_help
           question: "كيف تعمل كلارات؟"
         question_4:
           answer: "كلارات مجانية وستظل مجانية. فأي شخص يمكنه أن يبحث في <b>كلارات الأسرة<b> عن مساعدة للأطفال والشباب والأسر. وأي شخص يمكنه أن يبحث في <b>كلارات اللاجئين<b> عن مساعدة للاجئين."
@@ -97,18 +97,18 @@ ar:
         question_8:
           answer: "كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}."
           link_1:
-            class: 
-            name: 
+            class: FAQ_anchor_link
+            name: "هنا"
             url: 
-            var: 
+            var: ref_to_how_many_languages
           question: "ما هو المميز في كلارات؟"
         question_9:
           answer: "كلارات إحدي مشاريع مؤسسة بنكيزير للمستقبل%{link_to_bsz}. وهي مجموعة مؤسسات والتي تقوم منذ وقت طويل بأعمال من أجل الأطفال والشباب. والآن للاجئين من خلال كلارات للاجئين. هنا يمكنك مشاهدة هذا الفيلم التسجيلي لمعرفة الكثير عن المؤسسة %{link_to_bsz_movie}. فكرة كلارات جاءت في منتصف عام 2014. وفريق عمل كلارات تكون منذ سبتمبر 2014. إذا أردت معرفة الكثير عن فريق العمل انقر هنا %{link_to_about_us}."
           link_1:
             name: "مؤسسة بنكيزير المستقبل"
-            target: 
+            target: _blank
             url: 
-            var: 
+            var: link_to_bsz
           link_2:
             name: "فيديو"
             target: blank_
@@ -116,24 +116,24 @@ ar:
             var: link_to_bsz_movie
           link_3:
             name: "هنا"
-            target: 
+            target: _blank
             url: 
-            var: 
+            var: link_to_about_us
           question: "من وراء كلارات؟"
       section_2:
         anchor: questions_about_our_search
         heading: "هل لديك أسئلة بالنسبة للبحث؟"
         question_1:
-          anchor: 
+          anchor: who_finds_help
           answer: "كلارات للجميع ⧿ بنقرة واحدة تختار إما<b>كلارات الأسرة أو كلارات اللاجئين</b>:\n<p>\n<ul>\n<li>\n<b>كلارات الأسرة</b>  للأطفال والشباب والأسر اللذين يحتاجون لمساعدة. سواء إذا كان لديهم مشكلات في الأسرة أو مع الأصدقاء أو في المدرسة أو في أي مكان آخر.\n</li>\n<li>\n<b>كلارات اللاجئين</b>  للاجئين في ألمانيا. للاجئين من الأطفال والشباب والنساء وكذلك الرجال. وللأسر اللاجئة. أي لكل من لجأوا  إلى ألمانيا وبالتالي يحتاجون لمساعدة. \n</li>\n</ul>\n</p>\nفي كلارات يمكن لأشخاص أن يبحثوا  إذا كانوا يريدون ان يساعدون الآخرين. على سبيل المثال المربيين والمدرسين والجيران والمعارف."
           question: "من يمكنه أن يجد مساعدة في كلارات؟"
         question_10:
-          answer: 
+          answer: "هذا يمكن أن يكون له  أسباب عديدة.\n<p>\n<ul>\n<li>\nربما يكون السبب أن كلمة البحث الخاصة بك لا تصلح. إذا فعليك أن تجرب بكلمة أخرى. \nإذا لم تكن تذكر كلمة أخرى؛ فحاول أن تبحث عن طريق الصور.\n هذا يعني أنك تبحث في كلارات: <i> عن طريق التصنيف</i>. \n %{ref_to_how_to_find_right_help} هنا يمكنك أن تقرأ كيف يعمل هذا البحث.\n</li>\n<li>\nإذا كنت تعيش في الريف ولا تجد مساعدات بالقرب منك؛ فاكتب في خانة <b>أين؟</b> اسم مدينة قريبة منك. أو ابحث عن المساعدة  التي يمكن أن تحصل عليها عن طريق التليفون أو الإنترنت.\n</li>\n<li>\nيمكن أن يكون هناك سبباً آخر: هو اننا لم نجمع عروض الدعم المقدمة في منطقتك أو في مدينتك بعد.\n</li>\n<li>\nأو أننا  في كلارات للأسف ليس لدينا عروض مساعدة مناسبة للمشكلة التي لديك؛ \nولكي يتم تغيير هذا الأمر فإن تعليقك يهمنا. \nفاكتب لنا بالإيميل من فضلك على %{mailto_clarat}  في حالة إذا لم تجد ما تبحث عنه.\n كما يمكنك أيضا أن تكتب لنا في الدردشة؛ وهذه توجد أسفل الصفحة في اليمين.\n</li>\n</ul>\n</p>\n"
           link_1:
             class: FAQ_anchor_link
-            name: 
+            name: "هنا"
             url: 
-            var: 
+            var: ref_to_how_to_find_right_help
           link_2:
             name: post@clarat.org
             target: blank_
@@ -156,14 +156,14 @@ ar:
           answer: "في الصفحة الرئيسية سترى على اليمين علامة البرق؛ فعندما تنقر عليها ستظهر لك عروض معينة والتى من خلالها تحصل على مساعدات في حالات الطوارئ. أي إذا كنت تحتاج مساعدة عاجلة؛ ففي عروض المساعدة التي مكتوب <b> فيها ليلا ونهارا</b> يمكنك الإتصال دائما سواء كان الوقت متأخر. وإذا كنت لا تفضل الخروج من المنزل؛ فستجد هنا شخص يساعدك عن طريق التليفون أو الإنترنت. "
           question: "كيف أجد مساعدة عاجلة إذا كنتُ في حالة طوارئ"
         question_5:
-          anchor: 
+          anchor: how_to_find_right_help
           answer: "هناك طريقتان للعثور على المساعدة المناسبة لك\n<p>\n<ul>\n<li>\nإذا كنت تعرف بالفعل كيف تُسمَى المشكلة او المساعدة التي تبحث عنها؛ فعليك فقط أن تكتب هذا الإسم في خانة ماذا؟ في الصفحة الرئيسية. واكتب لاحقا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر على خانة أين؟ ثم انقر على <b> استخدام موقعي.<b>  وبعد ذلك انتقر على العدسة وستجد المساعدة التي بالقرب منك.\n</li>\n<li>\nأما إذا كنت لا تعرف بالضبط ما اسم المشكلة فجرب البحث عن طريق التصنيف. فمثلا إذا كانت لديك مشاكل في الواجبات المدرسية؛ فإضغط على رمز الكتاب. في الجهة اليسرى تجد مصطلحات كثيرة في موضوع التعلم والعمل, والتي يمنكك بالتالي النقر عليها لاحقا. واكتب أيضا في خانة أين؟ المكان الذي تبحث عن مساعدة فيه؛ أو انقر في خانة أين؟ ثم انقر على <b> استخدام موقعي.<b>  وبعد ذلك انقر على العدسة وستجد المساعدة التي بالقرب منك. "
           question: "كيف يمكنني أن أجد المساعدة المناسبة لي؟"
         question_6:
           answer: "الكثير من عروض المساعدة التي توجد في كلارات مجانية؛ ولكن هناك أيضا مساعدات تكلف شيئا ما. هذا لا يعني أنه عليك أن تدفع شخصيا وبشكل تلقائي. ولكن ربما يكون على شركة التأمين الصحي أن تتحمل النفقات أو تقوم بذلك إحدي الهيئات العامة؛ وهذه يمكن ان تكون مصلحة حكومية مثلا أو مؤسسة ما. فمن الأفضل في هذه الحالة أن تسأل مقدمي تلك العروض لكي تعرف بالضبط إذا كان عرض الدعم مجاني بالنسبة لك أم لا."
           question: "هل أجد مساعدة؛ يمكنني الإستفادة منها مجانا؟"
         question_7:
-          answer: 
+          answer: "هناك بعض عروض الدعم التي ستجدها في كلارات يمكنك الإستفادة منها بشكل مجهول.\n هذا يعني أنه لا يجب عليك أن تذكر اسمك.\n إذا كان من الممكن ان تستفيد من المساعدة بشكل مجهول؛ فهو مكتوب في كلارات تحت <i>ماذا عليك أن تفعل</i>  \nأما إذا لم يكن ذلك مكتوبا فعليك ان تسأل مقدمي العروض بشكل مباشر."
           question: "هل أجد مساعدة؛ يمكنني ان أستفيد منها بشكل مجهول؟"
         question_8:
           answer: |
@@ -183,10 +183,10 @@ ar:
             </p>
           question: "هل أجد في كلارات الأسرة مساعدة في حالة الإعاقة؟"
         question_9:
-          answer: 
+          answer: "إبدأ البحث عن المساعدة. إذا كنت تريد أن تعرف أي مساعدة مناسبة لك, يمكنك أن تقرأ هنا%{ref_to_how_to_find_right_help}.\n إذا كنت الآن في صفحة النتائج, فسترى بالأعلى في اليمين <b>عرض خيارات البحث</b>.\n إذا نقرت عليها؛ يمكنك إذًا استخدام العديد من الفلاتر وبذلك يكون البحث محدداً أكثر:\n<p>\n<ul>\n<li>\n<b>عمر الطفل؟</b> هنا تُدخل عمرك\n أو عمر الطفل الذي تبحث له عن مساعدة.\n</li>\n<li>\n<b>اللغة؟</b> هنا تُدخل اللغة؛ فتظهر لك\n عروض مساعدة التي يمكنك الإستفادة منها بلغتك. إذا لم تقم بإختيار أي لغة؛ فسيظهر لك\n بشكل تلقائي عروض المساعدة التي يُتحدث فيها بالألمانية.\n</li>\n<li>\n<b>المساعدة لمن؟</b>هنا يمكنك أن تختار لمن سوف تكون المساعدة؛\n فإذا كنت على سبيل المثال تبحث عن مساعدة لأسرتك كلها,\n فإنك تنقر على<i>من أجل الأسرة</i>. \nأما إذا كنت كطفل تبحث فقط لنفسك, فإنقر عل <i>للأطفال والشباب</i>.\n</li>\n<li>\n<b> النوع؟</b> هنا يمكنك الإختيار إذا كنت تبحث عن مساعدة <i>فقط للصبيان والرجال</i>\n أم أنك تبحث عن مساعدة <i>فقط للبنات والسيدات</i> .\n إذا لم تنقر على شئ فسيظل الفلتر تلقائيا على<i>سواء</i>. \n</li>\n<li>\n<b>بأي طريق؟</b>  هنا يمكنك الإختيار إذا كنت مثلا تريد فقط عروض مساعدة, التي تحصل عليها؛\n فقط عن طريق الذهاب إلى مكان العروض شخصياً؛ ففي هذه الحالة عليك أن تنقر على كلمة <i>شخصياً</i>.\n أما إذا كنت تفضل أن تحصل على المساعدة وأنت في منزلك؛ \nفعليك أن تنقر على كلمة  <i>تليفونياً</i> أو <i>أون لاين</i>.\n وبعدها يمكنك الإختيار بين وسائل التواصل الإليكترونية سواء التليفون, البريد الإليكتروني, \nالدردشة, منتدي أو دورة على الإنترنت.\n</li>\n</ul>\n</p>"
           link_1:
             class: FAQ_anchor_link
-            name: 
+            name: "هنا"
             url: 
             var: ref_to_how_to_find_right_help
           question: "كيف يمكنني تنقية نتائج البحث؟"
@@ -215,7 +215,7 @@ ar:
         heading: "هل لديك أسئلة حول موضوع كلارات بلغات مختلفة؟"
         question_1:
           anchor: how_many_languages
-          answer: 
+          answer: "يمكنك قراءة كل الصفحات بكلارات بالألمانية والإنجليزية"
           question: "ما هي اللغات المتاحة في كلارات؟"
         question_2:
           answer: 
@@ -294,17 +294,17 @@ ar:
         heading: 
         no_results: 
         toggle_section_html: 
-      obfuscated_email: 
+      obfuscated_email: "عنوان البريد الإليكتروني الخاض بك"
       refugees:
-        heading: 
-        no_results: 
+        heading: عروض كلارات اللاجئين الخاصة بك بالنسبة ل  <span id="secure-email-0">%{email}</span>
+        no_results: "في الوقت الحالي لا توجد عروض منشورة في كلارات اللاجئين بالنسبة ل  \n<span id=\"secure-email-0\">%{email}</span>"
         toggle_section_html: 
       shared:
-        explanation_1: 
-        explanation_2: 
-        explanation_3: 
-        explanation_4: 
-        info: 
+        explanation_1: "هنا سترى كل العروض الخاصة بك بشكل مجمع. هذه العروض هي التي وجدنا عندها عنوان البريد الإليكتروني الخاص بك كعنوان للتواصل. "
+        explanation_2: "لذا  وجدنا في المستقبل عروضا خاصة بك فسوف تتمكن من روية الروابط لهذه العروض أيضا."
+        explanation_3: "يمكنك أيضا إضافة هذه الصفحة إلى مفضلاتك وبذلك ترى بشكل مجمع ماذا يوجد في كلارات من طرفك."
+        explanation_4: "هل تريد أن يتم إبلاغك عن طريق الإيميل؛ عندما توجد عروضا جديدة من طرفك أون لاين في كلارات؟ إذا استخدم الرابط في نهاية الإيميل الذي وصلك منا.  "
+        info: "معلومات"
     subscribe:
       success_html: |
         لقد قمت بتسجيل نفسك بنجاح للحصول على إشعارات عن عروض
@@ -489,7 +489,7 @@ ar:
       error: "خطأ في البحث"
       message: |
         نأسف لحدوث خطأ في البحث. في حالة تكرار هذه المشكلة, اتصل بنا من فضلك
-    autocomplete_footer: 
+    autocomplete_footer: "كل %{results} نتائج البحث ل „%{query}“"
     categories_sidebar:
       all_categories: "جميع الفئات"
     cookie_warning_html: |-
@@ -501,8 +501,8 @@ ar:
       get: "استخدم موقعي !"
       waiting: "البحث عن موقع. ربما عليك أن تسمح بهذا أولا"
     lang_list_toggle:
-      less: 
-      more: 
+      less: "عرض لغات أقل"
+      more: "عرض لغات أكثر"
     less_filter_options: "عرض فلاتر أقل"
     location_required: |
       من فضلك أدخل اسم المكان الذي تريد أن تبحث فيه عن مساعدة
@@ -515,18 +515,18 @@ ar:
     query_field:
       example_placeholder: 
       placeholder_words:
-        family: 
-        refugees: 
+        family: '["المخدرات", "العنف", "دروس خصوصية", "حالة طوارئ", "حق", "عاطل", "مشاكل التربية", "إضطرابات في الأكل", "بلا مأوى", "مشكلات أسرية", "حامل", "شجار", "السكن"]'
+        refugees: '["التجنيس", "دورة لغة ألمانية", "إعتراف", "صدمة الحرب", "إجراءات اللجوء", "رعاية صحية", "سلطات", "حق الإقامة"]'
     routes:
       faq: 
     search:
       form_less_label: "اخفاء خيارات البحث"
       form_more_label: "عرض خيارات البحث"
       headlines:
-        age: 
-        approach: 
-        gender: 
-        language: 
+        age: "عمر الطفل"
+        approach: "بأي طريقة؟"
+        gender: "النوع"
+        language: "اللغة"
         target_audience: 
       option_any: 
       pagination:
@@ -560,34 +560,34 @@ ar:
         "'150'": "لغة الإشارة الألمانية"
         "'326'": " لغة أوكرانية - українська"
         "'568'": " لغة هولندية - Nederlands"
-        "'639'": 
+        "'639'": " لغة فارسية - دری"
         '150': "لغة الإشارة الألمانية"
         '326': " لغة أوكرانية - українська"
         '568': " لغة هولندية - Nederlands"
-        '639': 
+        '639': " لغة فارسية - دری"
         amh: "لغة أمهرية - አማርኛ"
         ara: " لغة عربية - عربي"
         aze: "لغة أذرية - Azərbaycan"
-        ban: 
+        ban: "لغة بالية - Basa Bali"
         bel: "لغة بيلاروسية - беларуская мова"
         ben: " لغة بنغالية - বাংলা"
         bos: "لغة بوسنوية - bosanski"
         bul: "لغة بلغارية - български"
-        cze: 
+        cze: "لغة تشيكية - čeština"
         deu: "لغة ألمانية - Deutsch"
         ell: "لغة يونانية - ελληνικά"
         eng: "لغة إنجليزية - English"
         fas: "لغة فارسية - فارسی"
-        fin: 
+        fin: "لغة فنلندية - suomi"
         fra: "لغة فرنسية - Français"
-        hbs: 
-        heb: 
+        hbs: "لغة مونتنغرية - Crnogorski jezik / Црногорски језик"
+        heb: " لغة عبرية - עברית"
         hin: "لغة هندية - हिन्दी"
         hrv: "لغة كرواتية - hrvatski"
         hun: "لغة مجرية - magyar"
         ita: "لغة إيطالية - italiano"
         kik: "زبان کیکویو - Gĩkũyũ"
-        kor: 
+        kor: "لغة كورية - 한국말 / 조선말"
         kur: " لغة كردية - کوردی"
         lav: "لغة لاتفية - latviešu"
         lit: "لغة ليتوانية - lietuvių"
@@ -601,9 +601,9 @@ ar:
         rom: "لغة رومنية - Romani"
         ron: "لغة رومانية - română"
         rus: "لغة روسية - русский"
-        slo: 
+        slo: "لغة سلوفاكية - slovenský jazyk"
         snk: "لغة سوننكية - Soninkanxaane"
-        som: 
+        som: "لغة صومالية - Soomaali"
         spa: "لغة إسبانية - español"
         sqi: "لغة ألبانية - Shqipja"
         srp: "لغة صربية - српски"
@@ -613,7 +613,7 @@ ar:
         tel: "لغة تيلوغوية - తెలుగు"
         tgk: "لغة طاجيكية - тоҷикӣ / تاجیکی"
         tha: "لغة تايلندية - ภาษาไทย"
-        tir: 
+        tir: "لغة تغرينية - ትግርኛ"
         tuk: "لغة تركمانية - Türkmençe / Tүркменче"
         tur: "لغة تركية - Türkçe"
         urd: "لغة أردوية - اردو"
@@ -767,13 +767,13 @@ ar:
         websites:
           application_form: 
           chat: 
-          contact_form: 
+          contact_form: "إستمارة الإتصال"
           document: "المزيد من المعلومات"
           facebook: "الفيس بوك"
-          forum: 
+          forum: "منتدى"
           gplus: "جوجل بلس"
-          online_consulting: 
-          online_course: 
+          online_consulting: "إستشارات إون لاين"
+          online_course: "دورة أون لاين"
           own: "صفحة النت"
           pinterest: "بيترست"
           twitter: "تويتر"
@@ -1012,7 +1012,7 @@ ar:
           Oder einfach vorbeigehen kannst.
       title:
         family: "عروض دعم للأطفال والشبان والأسر"
-        refugees: Unterstützungsangebote für Flüchtlinge
+        refugees: "عروض مساعدة للاجئين"
       whom:
         heading: Für wen ist clarat?
         text: |
@@ -1359,20 +1359,20 @@ ar:
     contacts: "إتصال"
     datenschutzhinweise: 
     definitions: 
-    emails: 
+    emails: "رسائل بريد إليكتروني"
     faq: haeufige-fragen
     haeufige-fragen: haeufige-fragen
     impressum: impressum
-    new: 
+    new: "جديد"
     offers: "عروض"
     organizations: "منظمة"
-    preview: 
-    rechtliche-hinweise: 
-    search_locations: 
-    subscribe: 
-    subscriptions: 
+    preview: "عرض"
+    rechtliche-hinweise: "إرشادات-قانونية"
+    search_locations: "بحث_المواقع"
+    subscribe: "إشترك"
+    subscriptions: "إشتراكات"
     ueber-uns: ueber-uns
-    unsubscribe: 
+    unsubscribe: "إلغاء الأشتراك"
     update_requests: 
     users: "مستخدم"
   shareds:
@@ -1387,7 +1387,7 @@ ar:
         لذلك  يفضل أن تلقى نظرة على النص الألماني
     tooltips:
       welcome:
-        advanced_search: 
+        advanced_search: "هل تريد جعل البحث محددا أكثر؛ إذا انقر هنا. سيفتح نافذة بها إختيارات"
         world_switch:
           family: 
           refugees: 
